@@ -10,7 +10,7 @@
 class IGroupAICallback;
 class IAICallback;
 
-#define AI_INTERFACE_VERSION 10
+#define AI_INTERFACE_VERSION 11
 
 class SPRING_API IGroupAI
 {
